1998-04-29  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mmutil.c (mmGetIndex): new implementation: Use generated lookup
	table (mmutil.inc) instead of "binary" search on size

Tue Apr 28 19:56:46 MET DST 1998 hannes
  * ipassign.cc: fixed assignment of resolution to list: need ipMoveId
1998-04-28  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* kstd2.cc (redHomog): Some more ouput for KDEBUG && TEST_OPT_DEBUG

	* mminit.cc: introduced memory(2) which measures physical memory
	consumption using the system call sbrk (this never lies!) 

Mon Apr 27 18:07:21 MET DST 1998 hannes
	* use ReAlloc for enlargeT, enlargeL  (kutil.cc)
Mon Apr 27 16:45:41 MET DST 1998 hannes
        * fixed conversion of factory 0 to poly NULL (clapconv.cc)

1998-04-27  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* febase.cc (myfread): introduced myfread and myfopen which assure 
	that newlines in text files are always \n

Fri Apr 24 19:14:42 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

	* clapsing.cc (FACTORY_GCD_STAT, singclap_divide_content):
	  dependency on FACTORY_GCD_TEST removed.  Statistics are now done
 	  using `FACTORY_GCDSTAT' and `FCATORY_CONTSTAT' which are defined
 	  to expand to nothing if `FACTORY_GCD_TIMING' is off.

	* extra.cc (FACTORY_GCD_STAT): dependency on `FACTORY_GCD_TEST'
	  removed.  Includes `gcd_stat.h' in dependency on
	  `FACTORY_CGD_STAT'.

	* extra.cc (jjSYSTEM): new command `gcdstat' in dependency on
	  `FACTORY_GCD_STAT'

Fri Apr 24 18:25:23 MET DST 1998 hannes
  * fixed bug in maps.cc: size of monom is not pMonomSize but mmGetSpecSize()
  * changed header in tesths.cc
  * changed handling of ring changes (polys*.cc ring.cc)
Thu Apr 23 20:53:06 MET DST 1998 hannes
  * removed END_GRAMMAR ("RETURN") from iparith.cc, grammar.y
Thu Apr 23 20:16:24 MET DST 1998 hannes
  * fixed bug in rKill of Q-rings (ring.cc, polys.cc)

Thu Apr 23 11:12:48 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>
